--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Fairy tales -- Ireland'
+- GITenberg
 title: Irish Fairy Tales
 url: http://www.gutenberg.org/ebooks/29311
